feat: implement core grave management system with custom markers, holograms, and particle effects